PLG_SYSTEM_BFSTOP_WARNING
+1 line from bfstop.xml

--- a/language/ru-RU/ru-RU.plg_system_bfstop.sys.ini
+++ b/language/ru-RU/ru-RU.plg_system_bfstop.sys.ini
@@ -51,6 +51,7 @@ PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Только фронтэнд"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Только бэкэнд"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Фронтэнд и бэкэнд"
 PLG_SYSTEM_BFSTOP_FATAL="Фатальная ошибка"
+PLG_SYSTEM_BFSTOP_WARNING="Предупреждение"
 PLG_SYSTEM_BFSTOP_INFO="Информационное сообщение"
 PLG_SYSTEM_BFSTOP_DEBUG="Детальная информация"
 PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Сокращение числа старых попыток"
@@ -64,7 +65,7 @@ PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="Порог, при которо
 PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Максимальный предел"
 PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="Порог, при котором адаптивная задержка достигает максимальную задержку (измеряется в количестве неудачных попыток входа за последний час)"
 PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Задержка"
-PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Уведомление"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Уведомления"
 PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Уведомление группы пользователей"
 PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Если включено, группы пользователей, выбранные ниже, будут оповещены в случае неудачных входов/блокировки IP-адреса"
 PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Группа пользователей"
