PLG_SYSTEM_BFSTOP_WARNING
+1 line from bfstop.xml

--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -51,6 +51,7 @@ PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Only Frontend"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Only Backend"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontend and Backend"
 PLG_SYSTEM_BFSTOP_FATAL="Fatal error"
+PLG_SYSTEM_BFSTOP_WARNING="Warning"
 PLG_SYSTEM_BFSTOP_INFO="Informational message"
 PLG_SYSTEM_BFSTOP_DEBUG="Detailed information"
 PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Prune old attempts"
