--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -4,6 +4,8 @@ PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Enable Blocking"
 PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
 PLG_SYSTEM_BFSTOP_USERID_LABEL="Select a User"
 PLG_SYSTEM_BFSTOP_USERID_DESC="Select the user you would like to have notifications to be sent."
+PLG_SYSTEM_BFSTOP_USE_HTACCESS_LABEL="Use .htaccess"
+PLG_SYSTEM_BFSTOP_USE_HTACCESS_DESC="Use .htaccess-file in Joomla!-directory for blocking ip addresses. Might be faster than blocking through Joomla!, but will only work if php has permissions to write to the .htaccess-file. Only activate this function if you know what you're doing, and keep a look at your server logfiles."
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Email Address(es)"
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Enter the Email Address(es) where you would like to have notifications to be sent. If you want to specify more than one address, separate them by the semicolon character (;)."
 PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
