Fix: root .htaccess, language

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -53,6 +53,7 @@ PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Nur Frontend"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Nur Backend"
 PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontend und Backend"
 PLG_SYSTEM_BFSTOP_FATAL="Fatale Fehler"
+PLG_SYSTEM_BFSTOP_WARNING="Warnung"
 PLG_SYSTEM_BFSTOP_INFO="Zusätzliche Information"
 PLG_SYSTEM_BFSTOP_DEBUG="Detailliertes Log"
 PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Löschen alter Einträge"
