--- a/language/pt-PT/pt-PT.plg_system_bfstop.sys.ini
+++ b/language/pt-PT/pt-PT.plg_system_bfstop.sys.ini
@@ -1,5 +1,5 @@
 ; Translated over version 0.9.10 by solrac comproperty247(at)gmail.com
-; www.com-property.site11.com
+; www.com-property.byethost8.com
 ; Saved as UTF-8 - No BOM
 
 PLG_SYSTEM_BFSTOP="Sistema - Brute Force Stop"
