Make .htaccess path configurable (fix #150)

--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -6,6 +6,8 @@ PLG_SYSTEM_BFSTOP_USERID_LABEL="Select a User"
 PLG_SYSTEM_BFSTOP_USERID_DESC="Select the user you would like to have notifications to be sent."
 PLG_SYSTEM_BFSTOP_USE_HTACCESS_LABEL="Use .htaccess"
 PLG_SYSTEM_BFSTOP_USE_HTACCESS_DESC="Use .htaccess-file in Joomla!-directory for blocking ip addresses. Might be faster than blocking through Joomla!, but will only work if php has permissions to write to the .htaccess-file. Only activate this function if you know what you're doing, and keep a look at your server logfiles."
+PLG_SYSTEM_BFSTOP_HTACCESS_PATH_LABEL=".htaccess path"
+PLG_SYSTEM_BFSTOP_HTACCESS_PATH_DESC="Path to the .htaccess file used for blocking (if .htaccess blocking is enabled, see setting 'Use .htaccess' above). This option should only contain the path, with trailing slash ('.htaccess' will be automatically appended). If empty, the root directory of this Joomla! installation is used."
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Email Address(es)"
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Enter the Email Address(es) where you would like to have notifications to be sent. If you want to specify more than one address, separate them by the semicolon character (;)."
 PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
