--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -6,6 +6,8 @@ PLG_SYSTEM_BFSTOP_USERID_LABEL="Benutzer wählen"
 PLG_SYSTEM_BFSTOP_USERID_DESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
 PLG_SYSTEM_BFSTOP_USE_HTACCESS_LABEL=".htaccess verwenden"
 PLG_SYSTEM_BFSTOP_USE_HTACCESS_DESC="Verwende die .htaccess-Datei im Joomla-Verzeichnis zum Blockieren von IP-Adressen. Möglicherweise schneller als die Blockierung aus Joomla! heraus, funktioniert aber nur wenn php direkte Schreibrechte auf die .htaccess-Datei hat. Aktivieren Sie diese Funktion also nur wenn Sie wissen was Sie tun, und behalten sie die Server-Logfiles im Auge."
+PLG_SYSTEM_BFSTOP_HTACCESS_PATH_LABEL=".htaccess Pfad"
+PLG_SYSTEM_BFSTOP_HTACCESS_PATH_DESC="Pfad zur .htaccess Datei, die für das Blocken verwendet wird (wenn Blocken mit .htaccess eingeschaltet ist, siehe die Option '.htaccess verwenden' oben). Hier darf nur das Verzeichnis eingetragen werden, mit abschließendem Schrägstrich ('.htaccess' wird automatisch angehängt). Wenn leer, wird automatisch das Wurzelverzeichnis dieser Joomla!-Installation verwendet."
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Email-Adresse(n)"
 PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Die Email-Adresse(n) eingeben, an die die Benachrichtigungen gesendet werden sollen. Wenn mehrere Adressen eingegeben werden, müssen diese durch einen Strichpunkt (;) getrennt werden."
 PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Fehlgeschlagen-Nachrichten"
