Add separate option for check interval (fix #131)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -81,3 +81,5 @@ PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="Wenn 1 Versuch übrig"
 PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="Wenn 2 Versuche übrig"
 PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="IP zeigen"
 PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="Zeige die IP Adresse des Benutzers (wie vom Server wahrgenommen) wenn blockiert"
+PLG_SYSTEM_BFSTOP_CHECK_INTERVAL_LABEL="Prüf-Zeitspanne"
+PLG_SYSTEM_BFSTOP_CHECK_INTERVAL_DESC="Zeitspanne, in der fehlgeschlagene Versuche von derselben IP für Sperren  berücksichtigt werden"
