--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -81,3 +81,5 @@ PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="When 1 attempt left"
 PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="When 2 attempts left"
 PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Show IP"
 PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="When blocked, show the user his IP address (as perceived by the server)"
+PLG_SYSTEM_BFSTOP_CHECK_INTERVAL_LABEL="Check interval"
+PLG_SYSTEM_BFSTOP_CHECK_INTERVAL_DESC="Interval for which failed attempts from the same IP address are considered for blocking."
