--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.4.3 (2021-04-28)
+  - Fix allowlist name in SQL (un)install script + update to fix situation for everyone
+
 1.4.2 (2021-04-20)
   - Joomla 4 Compatibility
   - Language: Whitelist -> Allow list (en/de)
