--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.4.4 (2021-07-26)
+  - No changes to bfstop plugin, just keeping plugin at same version as component
+
 1.4.3 (2021-04-28)
   - Fix allowlist name in SQL (un)install script + update to fix situation for everyone
 
