--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.4.5 (2023-05-15)
+  - Fix deprecation warning in server type check
+
 1.4.4 (2021-07-26)
   - No changes to bfstop plugin, just keeping plugin at same version as component
 
