--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
-1.4.5 (2023-05-15)
+1.4.5/6 (2023-05-15)
+  - Fix server errors in backend
   - Fix deprecation warning in server type check
+  - Remove copyright header dates
 
 1.4.4 (2021-07-26)
   - No changes to bfstop plugin, just keeping plugin at same version as component
