JED checker language fixes

--- a/language/es-ES/es-ES.plg_system_bfstop.sys.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.sys.ini
@@ -70,7 +70,7 @@ PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Notificación"
 PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Grupo de usuarios para la notificación"
 PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Si está activado, el grupo de usuarios seleccionados a continuación serán notificados en caso de inicios de sesión fallidos o IP prohibidas"
 PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Grupo de usuarios"
-PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Selecciona un grupo de usuarios para notificarles sobre los inicios de sesión fallidos e IP prohibidas (si está activado anteriormente). Probablemente deberás crear un grupo dedicado para ello, o usar un grupo con administradores experimentados, como el grupo por defecto 'Superusuarios'".
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Selecciona un grupo de usuarios para notificarles sobre los inicios de sesión fallidos e IP prohibidas (si está activado anteriormente). Probablemente deberás crear un grupo dedicado para ello, o usar un grupo con administradores experimentados, como el grupo por defecto 'Superusuarios'."
 PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Recordatorio para el restablecimiento de la clave"
 PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Si se ha de mostrar, y cuando, un recordatorio sobre el uso de la funcionalidad de recuperación de la contraseña en un inicio de sesión fallido"
 PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Siempre"
